--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,29 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+body {
+    max-width: 70%;
+    margin: auto;
 }
 
-#greeting-container {
-  margin-top: 20px;
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+}
+
+#content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
+}
+
+#fact-container {
+    margin-top: 20px;
 }
