--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,65 +1,88 @@
 body {
-    max-width: 70%;
-    margin: auto;
-    background-image: url(images/background.jpeg);
+  max-width: 70%;
+  margin: auto;
+  background-image: url(images/background.jpeg);
 }
 
 #name {
-    padding: 10% 0;
-    text-align: center;
-    font-size: 100px;
+  padding: 10% 0;
+  text-align: center;
+  font-size: 100px;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
 }
 
 #content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 650px;
 }
 
 #fact-container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #navBar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-family: "Courier New", Courier, monospace;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: "Courier New", Courier, monospace;
 }
 
 #navBar li {
-    float: left;
+  float: left;
 }
 
-#navBar li a{
-    display: block;
-    padding: 8px;
-    color: white;
-    text-decoration: none;
+#navBar li a {
+  display: block;
+  padding: 8px;
+  color: white;
+  text-decoration: none;
 }
 
 #navBar li a.active {
-    background-color: lightblue;
-    color: white;
+  background-color: lightblue;
+  color: white;
 }
 
 #navBar li a:hover:not(.active) {
   background-color: skyblue;
   color: white;
+}
+
+.hyperlink {
+  text-decoration: none;
+  color: darkblue;
+  padding: 8px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+button {
+  padding: 10px 24px;
+  border-radius: 8px;
+  background-color: lightblue;
+  border-color: transparent;
+}
+
+button:hover {
+  background-color: skyblue;
+}
+
+.ImgGallery p {
+  text-align: center;
+  font-size: 20px;
 }
